# TrailCurrentTorrent

./: .gitignore  CMakeLists.txt  README.md  build-all.sh  partitions.csv  platformio.ini
CAD/: trailcurrent-torrent-case-BodyContouredCover.3mf  trailcurrent-torrent-case.FCStd
EDA/: can.kicad_sch  mcu.kicad_sch  mosfets.kicad_sch  power.kicad_sch  trailcurrent-torrent.kicad_pcb  trailcurrent-torrent.kicad_prl  trailcurrent-torrent.kicad_pro  trailcurrent-torrent.kicad_sch  untitled.kicad_sch
EDA/Test/: Test.kicad_pcb  Test.kicad_prl  Test.kicad_pro  Test.kicad_sch
main/: CMakeLists.txt  can_handler.c  can_handler.h  discovery.c  discovery.h  idf_component.yml  main.c  ota.c  ota.h  pwm_output.c  pwm_output.h  wifi_config.c  wifi_config.h
